syntax = "proto3";

package chat;
option go_package = "proto/chat";

// on behalf of whom an operation is executed
message From {
  enum WhoEnum {
    ADMIN = 0;
    BOT = 1;
    USER = 2;
  }
  WhoEnum Who = 1;
  // obligatory if Who = USER
  // keep in mind only currently logged users can be used
  string ChatUserId = 2;
}

message CreateUserRequest {
  string Username = 1;
  string Email = 2;
}
message CreateUserResponse {
  string ChatUserId = 1;
}

message UserStatus {
  string Status = 1;
  string ChatUserId = 2;
}

message GetUsersStatusesRequest {
  repeated string ChatUserIds = 1;
}

message GetUserStatusesResponse {
  repeated UserStatus Statuses = 1;
}

message DeleteUserRequest {
  string ChatUserId = 1;
}

message DeleteUserResponse {}

message SetStatusRequest {
  From From = 1;
  UserStatus UserStatus = 2;
}

message SetStatusResponse{}

message LoginRequest {
  string UserId = 1;
  string ChatUserId = 2;
  string Username = 3;
}

message LoginResponse {
  string ChatSessionId = 1;
}

message LogoutRequest {
  string ChatUserId = 1;
}

message LogoutResponse {}

service Users {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUsersStatuses(GetUsersStatusesRequest) returns (GetUserStatusesResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc SetStatus(SetStatusRequest) returns (SetStatusResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message CreateClientChannelRequest {
  string ChatUserId = 1;
  string Name = 2;
  string DisplayName = 3;
  repeated string Subscribers = 4;
}

message CreateClientChannelResponse {
  string ChannelId = 1;
}

message GetChannelsForUserAndMembersRequest {
  string ChatUserId = 1;
  repeated string MemberChatUserIds = 2;
}

message GetChannelsForUserAndMembersResponse {
  repeated string ChannelIds = 1;
}

message SubscribeRequest {
  string ChatUserId = 1;
  string ChannelId = 2;
}

message SubscribeResponse {}

service Channels {
  rpc CreateClientChannel(CreateClientChannelRequest) returns (CreateClientChannelResponse) {}
  rpc GetChannelsForUserAndMembers(GetChannelsForUserAndMembersRequest) returns(GetChannelsForUserAndMembersResponse) {}
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
}

message PredefinedPost {
  string Code = 1;
  bytes Params = 2;
}

message Attachment {
  string Fallback = 1;
  string Color = 2;
  string Pretext = 3;
  string AuthorName = 4;
  string AuthorLink = 5;
  string AuthorIcon = 6;
  string Title = 7;
  string TitleLink = 8;
  string Text = 9;
  string ImageURL = 10;
  string ThumbURL = 11;
  string Footer = 12;
  string FooterIcon = 13;
}

message Post {
  From From = 1;
  string Message = 2;
  string ToChatUserId = 3;
  string ChannelId = 4;
  bool Ephemeral = 5;
  repeated Attachment Attachments = 6;
  PredefinedPost PredefinedPost = 7;
}

message PostRequest {
  repeated Post Posts = 1;
}

message PostResponse {}

message AskBotRequest {
  string Message = 1;
  string From = 2;
}

message AskBotResponse {
  bool Found = 1;
  string Answer = 2;
}

service Posts {
  rpc Post(PostRequest) returns (PostResponse) {}
  rpc AskBot(AskBotRequest) returns (AskBotResponse) {}
}
